Fix bug with the navbar search box width when switching between dark mode and day mode

--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -82,11 +82,6 @@ code {
   margin-top: 5px !important;
 }
 
-.search-box input {
-  width: 300px;
-  border-radius: 5px !important;
-}
-
 .post-button-group a {
   font-size: 1.2rem !important;
 }
